[gd_scene load_steps=13 format=2]

[ext_resource path="res://Input.gd" type="Script" id=1]
[ext_resource path="res://DankMono.tres" type="DynamicFont" id=2]
[ext_resource path="res://CalculateButton.gd" type="Script" id=3]
[ext_resource path="res://PointerStack.gd" type="Script" id=4]
[ext_resource path="res://StepButton.gd" type="Script" id=5]
[ext_resource path="res://StackStack.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.298039, 0.580392, 0.294118, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.639216, 0.329412, 0.329412, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 20

[node name="PointerArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_right = 984.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointerStack" type="HBoxContainer" parent="Background/MarginContainer/Rows/PointerArea"]
margin_right = 984.0
margin_bottom = 230.0
custom_constants/separation = 15
script = ExtResource( 4 )

[node name="StackArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_top = 250.0
margin_right = 984.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StackStack" type="HBoxContainer" parent="Background/MarginContainer/Rows/StackArea"]
margin_right = 984.0
margin_bottom = 230.0
custom_constants/separation = 15
script = ExtResource( 6 )
CALCULATE_BUTTON_PATH = NodePath("../../../../../CalculateButton")

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_top = 500.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 60 )
custom_styles/panel = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
margin_right = 984.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Caret" type="Label" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
margin_top = 14.0
margin_right = 51.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 8 )
text = " > "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
light_mask = 0
margin_left = 55.0
margin_right = 984.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
placeholder_alpha = 1.0
script = ExtResource( 1 )

[node name="StepButton" type="Button" parent="."]
margin_left = 230.0
margin_top = 436.0
margin_right = 395.0
margin_bottom = 481.0
custom_fonts/font = ExtResource( 2 )
text = "Step"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalculateButton" type="Button" parent="."]
margin_left = 42.0
margin_top = 436.0
margin_right = 207.0
margin_bottom = 481.0
custom_fonts/font = ExtResource( 2 )
text = "Calculate"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
STACK_STACK_PATH = NodePath("../Background/MarginContainer/Rows/StackArea/StackStack")
STEP_BUTTON_PATH = NodePath("../StepButton")

[connection signal="say_stack" from="Background/MarginContainer/Rows/PointerArea/PointerStack" to="StepButton" method="_on_PointerStack_say_stack"]
[connection signal="text_changed" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="CalculateButton" method="_on_Input_text_changed"]
[connection signal="button_down" from="StepButton" to="StepButton" method="_on_StepButton_button_down"]
[connection signal="update_label" from="StepButton" to="Background/MarginContainer/Rows/PointerArea/PointerStack" method="_on_StepButton_update_label"]
[connection signal="update_stack" from="StepButton" to="Background/MarginContainer/Rows/StackArea/StackStack" method="_on_StepButton_update_stack"]
[connection signal="button_down" from="CalculateButton" to="Background/MarginContainer/Rows/PointerArea/PointerStack" method="_on_Button_button_down"]
[connection signal="button_down" from="CalculateButton" to="CalculateButton" method="_on_CalculateButton_button_down"]
[connection signal="stack_update" from="CalculateButton" to="Background/MarginContainer/Rows/PointerArea/PointerStack" method="_on_CalculateButton_stack_update"]
